--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -1,30 +1,33 @@
-name: Update README Theme
+name: Update GitHub Profile Theme
 
 on:
   schedule:
-    - cron: "0 * * * *"  # Runs every hour
-  workflow_dispatch:  # Allows manual trigger
+    - cron: "*/5 * * * *"  # Runs every 5 minutes
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set Up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: '3.x'
+
+      - name: Install Dependencies
+        run: pip install --upgrade pip  # No extra dependencies needed
 
       - name: Run Update Script
         run: python update_readme.py
 
       - name: Commit and Push Changes
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "github-actions@github.com"
           git add README.md
-          git commit -m "Auto-update README theme"
+          git commit -m "Updated theme in README"
           git push
-        continue-on-error: true
+        continue-on-error: true  # Avoid failure if no changes
