--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -2,7 +2,7 @@ name: Update GitHub Profile Theme
 
 on:
   schedule:
-    - cron: "*/10 * * * *"  # Runs every 5 minutes
+    - cron: "*/10 * * * *"  # Runs every 10 minutes
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
@@ -28,6 +28,6 @@ jobs:
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "github-actions@github.com"
           git add README.md
-          git commit -m "Updated theme in README"
-          git push
-        continue-on-error: true  # Avoid failure if no changes
+          git commit -m "Updated theme in README" || echo "No changes to commit"
+          git push || echo "Nothing to push"
+        continue-on-error: true
